# riteaid-covid-rust

./: .env  Cargo.toml  Dockerfile
src/: lib.rs  main.rs
