[package]
name = "riteaid-covid-rust"
version = "0.1.0"
authors = ["Nate Mara <natemara@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.125", features = ["derive"] }
anyhow = "1.0.40"
futures = "0.3"
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
tracing-opentelemetry = "0.12.0"
opentelemetry = { version = "0.13.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.6.0", features = ["tls", "tls-roots"] }
tonic = "0.4.2"
tracing-futures = "0.2.5"
dashmap = "4.0.2"
